[package]
name = "jambo-node-executor"
version = "3.0.0"
description = "Substrate node implementation in Rust."
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jambo-node-primitives = { version = "3.0.0", path = "../primitives" }
jambo-node-runtime = { version = "3.0.0", path = "../runtime" }
sc-executor = { version = "0.9.0", path = "../substrate/client/executor" }
sp-core = { version = "3.0.0", path = "../substrate/primitives/core" }
sp-io = { version = "3.0.0", path = "../substrate/primitives/io" }
sp-state-machine = { version = "0.9.0", path = "../substrate/primitives/state-machine" }
sp-trie = { version = "3.0.0", path = "../substrate/primitives/trie" }
trie-root = "0.16.0"
frame-benchmarking = { version = "3.0.0", path = "../substrate/frame/benchmarking" }

[dev-dependencies]
criterion = "0.3.0"
node-testing = { version = "2.0.0", path = "../substrate/bin/node/testing" }
frame-support = { version = "3.0.0", path = "../substrate/frame/support" }
frame-system = { version = "3.0.0", path = "../substrate/frame/system" }
pallet-balances = { version = "3.0.0", path = "../substrate/frame/balances" }
pallet-contracts = { version = "2.0.1", path = "../substrate/frame/contracts" }
pallet-grandpa = { version = "3.0.0", path = "../substrate/frame/grandpa" }
pallet-im-online = { version = "3.0.0", path = "../substrate/frame/im-online" }
pallet-indices = { version = "3.0.0", path = "../substrate/frame/indices" }
pallet-session = { version = "3.0.0", path = "../substrate/frame/session" }
pallet-timestamp = { version = "3.0.0", path = "../substrate/frame/timestamp" }
pallet-transaction-payment = { version = "3.0.0", path = "../substrate/frame/transaction-payment" }
pallet-treasury = { version = "3.0.0", path = "../substrate/frame/treasury" }
sp-application-crypto = { version = "3.0.0", path = "../substrate/primitives/application-crypto" }
sp-runtime = { version = "3.0.0", path = "../substrate/primitives/runtime" }
sp-externalities = { version = "0.9.0", path = "../substrate/primitives/externalities" }
substrate-test-client = { version = "2.0.1", path = "../substrate/test-utils/client" }
wabt = "0.10.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
