[package]
name = "jambo-node-rpc"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"

jambo-node-primitives = { version = "3.0.0", path = "../primitives" }
jambo-node-runtime = { version = "3.0.0", path = "../runtime" }

sp-runtime = { version = "3.0.0", path = "../substrate/primitives/runtime" }
sp-api = { version = "3.0.0", path = "../substrate/primitives/api" }
sp-consensus-babe = { version = "0.9.0", path = "../substrate/primitives/consensus/babe" }
sp-consensus = { version = "0.9.0", path = "../substrate/primitives/consensus/common" }
sp-blockchain = { version = "3.0.0", path = "../substrate/primitives/blockchain" }
sp-block-builder = { version = "3.0.0", path = "../substrate/primitives/block-builder" }
sp-transaction-pool = { version = "3.0.0", path = "../substrate/primitives/transaction-pool" }
sp-keystore = { version = "0.9.0", path = "../substrate/primitives/keystore" }
pallet-contracts-rpc = { version = "0.8.0", path = "../substrate/frame/contracts/rpc" }
pallet-transaction-payment-rpc = { version = "3.0.0", path = "../substrate/frame/transaction-payment/rpc" }
substrate-frame-rpc-system = { version = "3.0.0", path = "../substrate/utils/frame/rpc/system" }
sc-client-api = { version = "3.0.0", path = "../substrate/client/api" }
sc-chain-spec = { version = "3.0.0", path = "../substrate/client/chain-spec" }
sc-consensus-babe = { version = "0.9.0", path = "../substrate/client/consensus/babe" }
sc-consensus-babe-rpc = { version = "0.9.0", path = "../substrate/client/consensus/babe/rpc" }
sc-keystore = { version = "3.0.0", path = "../substrate/client/keystore" }
sc-consensus-epochs = { version = "0.9.0", path = "../substrate/client/consensus/epochs" }
sc-finality-grandpa = { version = "0.9.0", path = "../substrate/client/finality-grandpa" }
sc-finality-grandpa-rpc = { version = "0.9.0", path = "../substrate/client/finality-grandpa/rpc" }
sc-rpc-api = { version = "0.9.0", path = "../substrate/client/rpc-api" }
sc-rpc = { version = "3.0.0", path = "../substrate/client/rpc" }
