[package]
name = "did"
version = "0.1.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
#rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }

# primitives
jambo-node-primitives = { version = "3.0.0", path = "../../primitives", default-features = false }
sp-core = { version = "3.0.0", path = "../../substrate/primitives/core", default-features = false }
sp-std = { version = "3.0.0", path = "../../substrate/primitives/std", default-features = false }
sp-runtime = { version = "3.0.0", path = "../../substrate/primitives/runtime", default-features = false }
sp-io = { version = "3.0.0", path = "../../substrate/primitives/io", default-features = false }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "3.0.0", path = "../../substrate/frame/system", default-features = false }
pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances", default-features = false }
pallet-timestamp = { version = "3.0.0", path = "../../substrate/frame/timestamp", default-features = false }

[dev-dependencies]


[features]
default = ["std"]
std = [
	"pallet-balances/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
]
