[package]
name = "utilities"
version = "0.1.0"
authors = ["Jambo Team <tech@jambo.network>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", optional = true }

# primitives
jambo-node-primitives = { version = "3.0.0", path = "../../primitives", default-features = false }
sp-core = { version = "3.0.0", path = "../../substrate/primitives/core", default-features = false }
rstd = { package = "sp-std", path = "../../substrate/primitives/std", default-features = false }
sp-runtime = { version = "2.0.0-alpha.2", path = "../../substrate/primitives/runtime",default-features = false }
sp-io = { version = "3.0.0", path = "../../substrate/primitives/io", default-features = false }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "2.0.0-alpha.2", path = "../../substrate/frame/system", default-features = false }

[dev-dependencies]


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
